2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)

	Spelling fixes.

2010-03-26  Werner Koch  <wk@g10code.com>

	* tiger.c (asn): Unfetter the old TIGER from an OID.
	(TIGER_CONTEXT): Add field VARIANT.
	(tiger_init): Factor code out to ...
	(do_init): New.
	(tiger1_init, tiger2_init): New.
	(_gcry_digest_spec_tiger1, _gcry_digest_spec_tiger2): New.
	* md.c (digest_table): Add TIGER1 and TIGER2 variants.

2009-12-11  Werner Koch  <wk@g10code.com>

	* sha256.c (Cho, Maj, Sum0, Sum1): Turn macros into inline
	functions.
	(transform): Partly unroll to interweave the chain variables

	* sha512.c (ROTR, Ch, Maj, Sum0, Sum1): Turn macros into inline
	functions.
	(transform): Partly unroll to interweave the chain variables.
	Suggested by Christian Grothoff.

2009-12-10  Werner Koch  <wk@g10code.com>

	* Makefile.am (o_flag_munging): New.
	(tiger.o, tiger.lo): Use it.

	* cipher.c (do_ctr_encrypt): Add arg OUTBUFLEN.  Check for
	suitable value.  Add check for valid inputlen.  Wipe temporary
	memory.
	(do_ctr_decrypt): Likewise.
	(do_cbc_encrypt, do_cbc_decrypt): Add arg OUTBUFLEN.  Check for
	suitable value.  Move check for valid inputlen to here; change
	returned error from INV_ARG to INV_LENGTH.
	(do_ecb_encrypt, do_ecb_decrypt): Ditto.
	(do_cfb_encrypt, do_cfb_decrypt): Ditto.
	(do_ofb_encrypt, do_ofb_decrypt): Ditto.
	(cipher_encrypt, cipher_encrypt): Adjust for above changes.
	(gcry_cipher_encrypt, gcry_cipher_decrypt): Simplify.

2009-12-09  Werner Koch  <wk@g10code.com>

	* cipher.c (gcry_cipher_open): Allow for GCRY_CIPHER_MODE_AESWRAP.
	(cipher_encrypt, cipher_decrypt): Ditto.
	(do_aeswrap_encrypt, do_aeswrap_decrypt): New.
	(struct gcry_cipher_handle): Add field marks.
	(cipher_setkey, cipher_setiv): Update marks flags.
	(cipher_reset): Reset marks.
	(cipher_encrypt, cipher_decrypt): Add new arg OUTBUFLEN.
	(gcry_cipher_encrypt, gcry_cipher_decrypt): Pass outbuflen to
	cipher_encrypt.  Replace GPG_ERR_TOO_SHORT by
	GPG_ERR_BUFFER_TOO_SHORT.
