@@ -1,3 +1,7 @@
+2010-06-10  Werner Koch  <wk@g10code.com>
+
+	* t-mpi-bit.c (mpi2bitstr_nlz): Handle case for LENGTH==0.
+
 2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)
 
 	* basic.c (check_cbc_mac_cipher): Print more info.
